# Pedster

./: .gitignore  CONTEXT.md  README.md  config.toml.example  pyproject.toml
pedster/: __init__.py  __main__.py  assets.py  definitions.py  resources.py
pedster/ingestors/: __init__.py  base_ingestor.py  cli_ingestor.py  imessage_ingestor.py  podcast_ingestor.py  rss_ingestor.py  web_ingestor.py
pedster/outputs/: base_output.py  imessage_output.py  obsidian_output.py
pedster/processors/: base_processor.py  llm_processor.py  map_reduce_processor.py  transcription_processor.py
pedster/utils/: database.py  metrics.py  models.py
scripts/: cleanup.sh  init.sh  run_tests.py  setup_env.py
tests/pedster/ingestors/: test_cli_ingestor.py
tests/pedster/utils/: test_models.py
