[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pedster"
version = "0.1.0"
description = "Data processing pipeline with various ingestors and processors using Dagster"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "dagster",
    "dagster-webserver",
    "pydantic",
    "openai",
    "openrouter-py",
    "jina",
    "feedparser",
    "requests",
    "whisper",
    "markdown",
    "sqlalchemy",
    "python-dateutil",
    "torch",
    "numpy",
    "sentence-transformers",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

[tool.setuptools]
packages = ["pedster"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["E203"]
fixable = ["ALL"]
exclude = [".git", ".venv", "venv", "env"]
force-exclude = true

[tool.ruff.isort]
known-first-party = ["pedster"]
lines-after-imports = 2

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.dagster]
module_name = "pedster"